@@ -35,13 +35,25 @@ api_setup() {
         ${OARCONFDIR}/stress_factor.sh \
         0700 ${OAROWNER}
 
-    # install the apache2 configuration file
-    if [ -d ${APACHECONFDIR}/conf.d ]; then
-        # Check if an old configuration file already exists
+    # Install the apache2 configuration file
+    #
+    # Starting with Debian8, Apache configs are managed using a2enconf/a2disconf/a2query -c, 
+    # and stored in the conf-{available,enabled} directories
+    if a2query -c >& /dev/null; then 
+        if [ -L  ${APACHECONFDIR}/conf-available/oar-api.conf ]; then
+            rm ${APACHECONFDIR}/conf-available/oar-api.conf
+        elif [ -f ${APACHECONFDIR}/conf-available/oar-api.conf ]; then
+            mv ${APACHECONFDIR}/conf-available/oar-api.conf ${APACHECONFDIR}/conf-available/oar-restful-api.conf
+        fi
+        if [ ! -e ${APACHECONFDIR}/conf-available/oar-api-restful.conf ]; then
+            ln -s ${OARCONFDIR}/apache2/oar-api-restful.conf ${APACHECONFDIR}/conf-available/oar-restful-api.conf
+        fi
+    # UnTil Debian7, Centos6, Apache configs are stored in the conf.d directory
+    elif [ -d ${APACHECONFDIR}/conf.d ]; then
         if [ -L  ${APACHECONFDIR}/conf.d/oar-api.conf ]; then
             rm ${APACHECONFDIR}/conf.d/oar-api.conf
         elif [ -f ${APACHECONFDIR}/conf.d/oar-api.conf ]; then
-            mv ${APACHECONFDIR}/conf.d/oar-api.conf ${APACHECONFDIR}/conf.d/oar-restful-api.conf;
+            mv ${APACHECONFDIR}/conf.d/oar-api.conf ${APACHECONFDIR}/conf.d/oar-restful-api.conf
         fi
         if [ ! -e ${APACHECONFDIR}/conf.d/oar-restful-api.conf ]; then
             ln -s ${OARCONFDIR}/apache2/oar-restful-api.conf ${APACHECONFDIR}/conf.d/oar-restful-api.conf
